--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
     <!-- Navbar Header -->
     <nav class="w-full bg-slate-900 bg-opacity-60 backdrop-blur-md py-3 px-6 flex justify-between items-center fixed top-0 z-50 border-b border-slate-700">
       <div class="text-sm sm:text-base text-white">
-        <span class="gradient-text font-semibold">Bavesh Krishna</span> – Founder,FlowKube
+        <span class="gradient-text font-semibold">Bavesh Krishna</span> – Founder & CEO, Agentic SaaS
       </div>
       <div class="space-x-4 text-sm">
         <a href="mailto:baveshkrishnap@gmail.com" class="text-cyan-300 hover:underline">Email</a>
         <a href="https://github.com/bavesh-aispace" class="text-cyan-300 hover:underline">GitHub</a>
-        <a href="" class="text-cyan-300 hover:underline">Resume</a>
-
+        <a href="resume.pdf" target="_blank" class="text-cyan-300 hover:underline">Resume</a>
       </div>
     </nav>
 
@@ -114,6 +113,7 @@
       <div class="space-x-4">
         <a href="mailto:baveshkrishnap@gmail.com" class="bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded-lg text-white">Email Me</a>
         <a href="https://github.com/bavesh-aispace" target="_blank" class="bg-gray-700 hover:bg-gray-800 px-4 py-2 rounded-lg text-white">GitHub</a>
+        <a href="resume.pdf" target="_blank" class="bg-teal-600 hover:bg-teal-700 px-4 py-2 rounded-lg text-white">Resume</a>
       </div>
     </section>
 
