--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="space-x-4 text-sm">
         <a href="mailto:baveshkrishnap@gmail.com" class="text-cyan-300 hover:underline">Email</a>
         <a href="https://github.com/bavesh-aispace" class="text-cyan-300 hover:underline">GitHub</a>
-        <a href="resume.pdf" target="_blank" class="text-cyan-300 hover:underline">Resume</a>
+        <a href="https://github.com/bavesh-aispace/bavesh-aispace.github.io/blob/main/resume.pdf" target="_blank" class="text-cyan-300 hover:underline">Resume</a>
       </div>
     </nav>
 
