--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="space-x-4 text-sm">
         <a href="mailto:baveshkrishnap@gmail.com" class="text-cyan-300 hover:underline">Email</a>
         <a href="https://github.com/bavesh-aispace" class="text-cyan-300 hover:underline">GitHub</a>
-        <a href="https://bavesh-aispace.github.io/resume.pdf" target="_blank" class="text-cyan-300 hover:underline">Resume</a>
+        <a href="https://bavesh-aispace.github.io/Resume.pdf" target="_blank" class="text-cyan-300 hover:underline">Resume</a>
 
       </div>
     </nav>
@@ -182,7 +182,7 @@
       <div class="space-x-4">
         <a href="mailto:baveshkrishnap@gmail.com" class="bg-blue-600 hover:bg-blue-700 px-4 py-2 rounded-lg text-white">Email Me</a>
         <a href="https://github.com/bavesh-aispace" target="_blank" class="bg-gray-700 hover:bg-gray-800 px-4 py-2 rounded-lg text-white">GitHub</a>
-        <a href="https://bavesh-aispace.github.io/resume.pdf" target="_blank" class="bg-teal-600 hover:bg-teal-700 px-4 py-2 rounded-lg text-white">Resume</a>
+        <a href="https://bavesh-aispace.github.io/Resume.pdf" target="_blank" class="bg-teal-600 hover:bg-teal-700 px-4 py-2 rounded-lg text-white">Resume</a>
       </div>
     </section>
 
