--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <div class="relative flex flex-col md:flex-row md:justify-between gap-6 text-sm items-start md:items-stretch">
 
       <!-- SOURCES BOX -->
-      <div class="relative flex-1 border border-white/30 rounded-xl p-4 space-y-4">
+      <div class="relative flex-grow border border-white/30 rounded-xl p-4 space-y-4">
         <div class="bg-[#1c2a3a] p-4 rounded-xl shadow text-center animate-fadeInLeft">
           🧑‍💻 Any Programming Language
         </div>
@@ -134,7 +134,7 @@
       </div>
 
       <!-- LOGICAL DATA MANAGEMENT BOX -->
-      <div class="relative flex-1 border border-white/30 rounded-xl p-4 space-y-4">
+      <div class="relative flex-grow border border-white/30 rounded-xl p-4 space-y-4">
         <div class="bg-[#1f1e87] p-4 rounded-xl shadow text-center text-xl font-bold animate-pulse">
           🧠 DataRobot MLOps
           <p class="text-xs font-normal mt-1 text-slate-300">Dashboards • Diagnostics • Alerts</p>
@@ -180,7 +180,7 @@
       </div>
 
       <!-- CONSUMERS BOX -->
-      <div class="relative flex-1 border border-white/30 rounded-xl p-4 space-y-4">
+      <div class="relative flex-grow border border-white/30 rounded-xl p-4 space-y-4">
         <div class="bg-[#1c2a3a] p-4 rounded-xl shadow text-center animate-fadeInRight">
           💬 Messaging Systems
         </div>
